# youtube-shorts-maker

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  pyproject.toml  requirements.txt  run.md  shorts_maker.py
youtube_shorts_maker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
