[project]
name = "youtube-shorts-maker"
version = "1.0.0"
description = "Convert local video files into YouTube Shorts using AI"
authors = [{name = "Syed Ali Zafar", email = "syedalizafar0@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.0",
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    "openai-whisper>=20231117",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
]

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = true
